# forge-agent

./: .gitignore  README.md  agent.py  agent_tools.py  approval_prompt.py  coding-agent-production-build-plan.md  file_list_tool.py  file_read_tool.py  file_write_tool.py  human_review.py  install.ps1  install.sh  policy_engine.py  pyproject.toml  requirements.txt  shell_command_tool.py  text_search_tool.py
.forge-agent/: config.toml  events.jsonl
src/forge_agent/: agent.py  agent_tools.py  approval_mode.py  approval_prompt.py  cli_args.py  context_builder.py  event_log.py  file_list_tool.py  file_read_tool.py  file_write_tool.py  git_tools.py  human_review.py  index_builder.py  index_store.py  long_term_memory.py  mcp_config.py  mcp_tools.py  model_router.py  path_utils.py  policy_engine.py  session_memory.py  (+12 more)
tests/: test_agent_tools.py  test_approval_mode.py  test_cli_args.py  test_context_builder.py  test_event_log.py  test_file_list_tool.py  test_file_read_tool.py  test_file_write_tool.py  test_git_tools.py  test_human_review.py  test_index_builder.py  test_index_store.py  test_install_scripts.py  test_long_term_memory.py  test_mcp_config.py  test_mcp_tools.py  test_model_router.py  test_package_metadata.py  test_path_utils.py  test_policy_engine.py  test_query_understanding.py  test_repository_scanner.py  test_retrieval_engine.py  test_sandbox_python_tool.py  test_session_memory.py  test_shell_command_tool.py  test_skill_loader.py  test_slash_commands.py  test_task_planner.py  test_task_report.py  test_terminal_ui.py  test_text_chunker.py  test_text_search_tool.py
(+6 files in other folders)
